--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -41,10 +41,10 @@ body :-ms-input-placeholder {
   background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   position: absolute;
-  top: 50%;
+  top: 25%;
   left: 0;
   width: 100%;
-  height: 400px;
+  height: 100%;
   margin-top: -200px;
   overflow: hidden;
 }
